# Metadata_Service

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  lineage.py  main.py  models.py  schemas.py  search.py
