[tool.poetry]
name = "metadata-service"
version = "0.1.0"
description = "Dataset Metadata & Lineage Service"
authors = ["Yogesh"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
pymysql = "^1.1"
python-dotenv = "^1.0"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
pre-commit = "^3.7"
